<resources>
    <string name="app_name">AI Recommender</string>
    <string name="logo_placeholder">logo</string>
    <string name="app_description">Suggests outfits based on style preferences, trends, weather, and occasion for personalized styling</string>
    <string name="getStarted">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="google">Continue with Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?\t</string>
    <string name="createAccountText"><u>Create new one</u>"</string>
    <string name="forget_password">Forget password?</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?\t</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="confirm_description">Do you want to remove the user? (this action is not reversible)</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Floating">floating_btn</string>
    <string name="user_profile_str">Profile Image</string>
    <string name="favourite">Favourite</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="recommend">Recommend</string>
    <string name="Preference">Preference</string>
    <string name="Items">Items</string>
    <string name="cloth_form">Clothing Type</string>
    <string name="occasion_type">Occasion Type\n</string>
    <string name="occasion">Occasion</string>
    <string name="fabric">Fabric</string>
    <string name="colors">Colors</string>
    <string name="Style">Style</string>
    <string name="style_reference">Style Preference</string>
    <string name="size">Size</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="fitType">Fit Type</string>
    <string name="body_type">Body Type</string>
    <string name="body_measur">Body Measurements</string>
    <string name="budget">Budget</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="recomander">Recommender</string>
    <string name="back">Back</string>
    <string name="recommended_cloths">Recommendations</string>
    <string name="cloth_recommender">Cloth Recommender</string>
    <string name="get_inspired">Struggling with Outfit Choices?</string>
    <string name="makeup_recommender">Makeup Recommender</string>
    <string name="tagline">Your Perfect Outfit Is Just A Tap Away!</string>
    <string name="Note"><b>Note</b> : This outfit suits your age, shape and style.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="no_favourite_images">Nothing here</string>
    <string name="no_favourite_images_found">No favourite images found.</string>
    <string name="favourite_images_text">Favourite Images</string>
    <string name="personalInfo">Personal Information</string>
    <string name="skinDetailes">Skin Details</string>
    <string name="skinTone">Skin Tone</string>
    <string name="skinType">Skin Type</string>
    <string name="makeup_prefrence">Makeup Preference</string>
    <string name="makeup">Makeup</string>
    <string name="products">Products</string>
    <string name="colorPreference">Color Preference</string>
    <string name="shades">Shades</string>
    <string name="accessories">Accessories</string>
    <string name="makeupAccessories">Makeup Accessories</string>
    <string name="generating_recommendation">Generating recommendation…</string>
    <string name="complete_style_recommender">Fashion Style</string>
    <string name="clothing_items">Cloth Items</string>
    <string name="makeup_item">Makeup Items</string>
    <string name="makeup_shades">Makeup Shades</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="preference_type">Preference</string>
    <string name="fashion_style">Fashion Style</string>

</resources>