<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.AccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/logo_placeholder"
                android:src="@drawable/ic_account_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:elevation="12dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_marginTop="11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:elevation="12dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_marginVertical="24dp"
                android:textSize="22sp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/or"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/google_btn"
                android:layout_marginTop="11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:elevation="12dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/red"
                android:textColor="@android:color/white"/>
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>